--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
 <body>
-    <h1>Log into Sphero</h1>
+    <h1>Log into payfit</h1>
 <label for="">Email:</label>
 <input type="text" name="username" id=""><br><br>
 <label for="">Password:</label>
 <input type="text" name="username" id=""><br>
 
-<!-- Sphero bug -->
-
+<!-- sdto-by-stuxnite -->
 </body>
 </html>
